@@ -7,7 +7,7 @@ standards, things that could be improved, and ideas for enhancements.
 nuttx/
 
  (11)  Task/Scheduler (sched/)
-  (2)  Memory Managment (mm/)
+  (1)  Memory Managment (mm/)
   (3)  Signals (sched/, arch/)
   (2)  pthreads (sched/)
   (2)  C++ Support
@@ -186,9 +186,9 @@ o Task/Scheduler (sched/)
                posix_spawn().  However, posix_spawn uses the non-standard, internal
                NuttX interface task_reparent() to replace the childs parent task
                with the caller of posix_spawn().  That cannot be done with vfork()
-               because we don't know what vfor() is going to do.
+               because we don't know what vfork() is going to do.
 
-               Any solution to this is either very difficult or impossible with
+               Any solution to this is either very difficult or impossible without
                an MMU.
   Status:      Open
   Priority:    Low (it might as well be low since it isn't going to be fixed).
@@ -200,7 +200,8 @@ o Task/Scheduler (sched/)
                to make this change:  Just move the pterrno field from
                _TCB to struct task_group_s.   However, I am still not sure
                if this should be done or not.
-  Status:      Open
+  Status:      Closed.  The existing solution is better (although its
+               incompatibilities could show up in porting some code).
   Priority:    Low
 
 o Memory Managment (mm/)
@@ -269,19 +270,6 @@ o Memory Managment (mm/)
   Priority:    Medium/Low, a good feature to prevent memory leaks but would
                have negative impact on memory usage and code size.
 
-  Title:       CONTAINER ALLOCATOR
-  Description: There are several places where the logic requires allocation of
-               a tiny structure that just contains pointers to other things or
-               small amounts of data that needs to be bundled together.  There
-               are examples net/net_poll.c and numerous other places.
-
-               I am wondering if it would not be good create a pool of generic
-               containers (say void *[4]).  There re-use these when we need
-               small containers.  The code in sched/task_childstatus.c might
-               be generalized for this purpose.
-  Status:      Open
-  Priority:    Very low (I am not even sure that this is a good idea yet).
-
 o Signals (sched/, arch/)
   ^^^^^^^^^^^^^^^^^^^^^^^
 
@@ -289,7 +277,7 @@ o Signals (sched/, arch/)
   Description: 'Standard' signals and signal actions are not supported.
                (e.g., SIGINT, SIGSEGV, etc).
 
-               Update:  SIG_CHLD is support if configured.
+               Update:  SIG_CHLD is supported if so configured.
   Status:      Open.  No changes are planned.
   Priority:    Low, required by standards but not so critical for an
                embedded system.
