@@ -4108,3 +4108,8 @@
 	  const char **.
 	* sched/pthread* and include/nuttx/sched: Move pthread join data
 	  and pthread key calculation data into the "task group" structure.
+	* sched/atexit.c, on_exit.c, task_exithook.c and include/nuttx/sched.h:
+	  Move atexit and on_exit data structure to task group.  These
+	  callbacks are only issued now when the final member of the task
+	  group exits.
+
